--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,120 @@
-:root{
-  --color__white:#F5F6F7;
-  --color__accent1:#222E50;
+:root {
+    --color__white: #F5F6F7;
+    --color__accent1: #222E50;
+    --color__text: #011A3E;
+    --padding__LR: 6.25rem;
 }
+
 body {
-  margin: 0;
-  font-family: 'Inter', sans-serif;
+    margin: 0;
+    font-family: 'Inter', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+    margin: 0;
+    color: var(--color__text);
 }
 
-header{
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: var(--color__accent1);
-  color:var(--color__white);
-  padding:.9375rem 6.25rem;
+
+/* Header */
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--color__accent1);
+    color: var(--color__white);
+    padding: .9375rem var(--padding__LR);
 }
 
-header>ul{margin:0; padding:0;display:flex;gap:100px}
-header>ul>li{margin:0; list-style: none;padding:5px 15px;
-  background: 
-     linear-gradient(var(--color__white) 0 0) 
-    0% calc(-5px - 100%) /var(--d, 0%) 200% no-repeat;
-  transition: 0.3s, background-size 0.3s 0.3s;}
-header>ul>li>a{font-size:20px;font-weight:500;text-decoration:none;color:var(--color__white);}
-header>ul>li:hover{
-  --d: 100%;
-  background-position: 50% 0%;
-  transition: 0.3s, background-position 0.3s 0.3s, color 0.3s 0.3s;}
-  header>ul>li:hover >a{transition:color 0.7s; color: var(--color__accent1);}
-.Header-logo{
-  font-weight: 600;
-  font-size:22px;
-  margin:0;
+.Header-logo {
+    color: inherit;
+    font-weight: 600;
+    font-size: 22px;
+    margin: 0;
+}
+
+header>ul {
+    gap: 100px;
+}
+
+header>ul,
+footer>ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+header>ul>li {
+    background: linear-gradient(var(--color__white) 0 0) 0% calc(-5px - 100%) /var(--d, 0%) 200% no-repeat;
+}
+
+header>ul>li,
+footer>ul>li {
+    margin: 0;
+    list-style: none;
+    transition: 0.3s, background-size 0.3s 0.3s;
+}
+
+header>ul>li>a,
+footer>ul>li>a {
+    color: inherit;
+    text-decoration: none;
+    display: block;
+    padding: 5px 15px;
+}
+
+header>ul>li>a {
+    font-size: 20px;
+    font-weight: 500;
+    padding: 5px 15px;
+}
+
+header>ul>li:hover,
+footer>ul>li:hover {
+    --d: 100%;
+    background-position: 50% 0%;
+    transition: 0.3s, background-position 0.3s 0.3s, color 0.3s 0.3s;
+}
+
+header>ul>li:hover>a {
+    color: var(--color__accent1);
+}
+
+header>ul>li:hover>a,
+footer>ul>li:hover>a {
+    transition: color 0.9s;
+}
+
+
+/* Main */
+
+main {
+    padding: 5rem var(--padding__LR);
+}
+
+
+/* Footer */
+
+footer {
+    background-color: #EEEEEE;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .625rem var(--padding__LR);
+    color: var(--color__accent1);
+    font-weight: 500;
+    font-size: .9375rem;
+}
+
+footer>ul {
+    gap: 50px;
+}
+
+footer>ul>li {
+    background: linear-gradient(var(--color__accent1) 0 0) 0% calc(-5px - 100%) /var(--d, 0%) 200% no-repeat;
+}
+
+footer>ul>li:hover>a {
+    color: var(--color__white);
 }
