src/components/Header.css : add style to .Header-logo

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,6 +16,11 @@ header {
     margin: 0;
 }
 
+.Header-logo a {
+    color: inherit;
+    text-decoration: none;
+}
+
 header>ul {
     gap: 100px;
 }
