src/components/ProjectsLanguages.css : change font-size

--- a/src/components/ProjectsLanguages.css
+++ b/src/components/ProjectsLanguages.css
@@ -1,5 +1,5 @@
 p.ProjectsLanguages {
-    font-size: 1rem;
+    font-size: .875rem;
     border-radius: 5px;
     padding: .25rem 1.125rem;
     color: var(--color__white);
