--- a/src/components/ProjectsCards.css
+++ b/src/components/ProjectsCards.css
@@ -4,14 +4,16 @@
     box-shadow: 0px 0px 5px #000000;
     border-radius: 15px;
     color: #011A3E;
+    width: 34.375rem;
 }
 
 .ProjectsCards-illustration {
     background-color: #F8F8F8;
+    border-radius: 15px 15px 0 0;
 }
 
 .ProjectsCards-content {
-    padding: 1.125rem 1.625rem;
+    padding: 2.1875rem 3.4375rem;
 }
 
 .ProjectsCards-content-title {
@@ -29,11 +31,16 @@
 
 .ProjectsCards-content p {
     font-weight: 400;
-    font-size: 1.125rem;
+    font-size: 1rem;
     line-height: 1.625rem;
     text-align: justify;
 }
 
+.ProjectsCards-content-title a {
+    display: flex;
+}
+
 .ProjectsCards-languages {
     display: flex;
+    gap: 2.1875rem;
 }
