--- a/src/index.css
+++ b/src/index.css
@@ -22,21 +22,21 @@ p {
     margin: 0;
 }
 
-header>ul,
+header>nav>ul,
 footer>ul {
     margin: 0;
     padding: 0;
     display: flex;
 }
 
-header>ul>li,
+header>nav>ul>li,
 footer>ul>li {
     margin: 0;
     list-style: none;
     transition: 0.3s, background-size 0.3s 0.3s;
 }
 
-header>ul>li>a,
+header>nav>ul>li>a,
 footer>ul>li>a {
     color: inherit;
     text-decoration: none;
@@ -44,14 +44,14 @@ footer>ul>li>a {
     padding: 5px 15px;
 }
 
-header>ul>li:hover,
+header>nav>ul>li:hover,
 footer>ul>li:hover {
     --d: 100%;
     background-position: 50% 0%;
     transition: 0.3s, background-position 0.3s 0.3s, color 0.3s 0.3s;
 }
 
-header>ul>li:hover>a,
+header>nav>ul>li:hover>a,
 footer>ul>li:hover>a {
     transition: color 0.9s;
 }
