src/components/Header.css : replace header>ul by header>nav>ul, add active link style

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -21,20 +21,25 @@ header {
     text-decoration: none;
 }
 
-header>ul {
+header>nav>ul {
     gap: 100px;
 }
 
-header>ul>li {
+header>nav>ul>li {
     background: linear-gradient(var(--color__white) 0 0) 0% calc(-5px - 100%) /var(--d, 0%) 200% no-repeat;
 }
 
-header>ul>li>a {
+header>nav>ul>li>a {
     font-size: 20px;
     font-weight: 500;
     padding: 5px 15px;
 }
 
-header>ul>li:hover>a {
+header>nav>ul>li:hover>a {
     color: var(--color__accent1);
+}
+
+header>nav>ul>li>a.active{
+    --d: 100%;
+    background: linear-gradient(var(--color__white) 0 0) 0% calc(-5px - 100%) /var(--d, 0%) 200% no-repeat;
 }
