--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,7 +6,7 @@
 .App-content {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
 }
 
