src/components/App.css : change justify-content:space-between to justify-content:space-around on .App-Numbers

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -12,7 +12,7 @@
 
 .App-Numbers {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .Project-Cards {
