--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
     --color__white: #F5F6F7;
     --color__accent1: #222E50;
+    --color__accent2: #407BFF;
     --color__text: #011A3E;
     --padding__LR: 6.25rem;
 }
