src/components/Numbers.css : add --color__accent2 var

--- a/src/components/Numbers.css
+++ b/src/components/Numbers.css
@@ -7,6 +7,6 @@
 .App-Numbers span {
     font-size: 45px;
     display: block;
-    color: #407BFF;
+    color: var(--color__accent2);
     font-weight: 700;
 }
