--- a/src/index.css
+++ b/src/index.css
@@ -89,3 +89,40 @@ h1 {
 .button:hover {
     background-color: #3362cc;
 }
+
+@keyframes rebond {
+    0% {
+        opacity: 0;
+        transform-origin: 50% 50%;
+        transform: scale(1.25, 1.25);
+        filter: blur(1px);
+    }
+    100% {
+        opacity: 1;
+        transform-origin: 50% 50%;
+        transform: scale(1, 1);
+        filter: blur(0px);
+    }
+}
+
+@keyframes cliquenaude {
+    0% {
+        animation-timing-function: ease-in;
+        opacity: 0;
+        transform: perspective(400px) rotateX(90deg)
+    }
+    40% {
+        animation-timing-function: ease-in;
+        transform: perspective(400px) rotateX(-20deg)
+    }
+    60% {
+        opacity: 1;
+        transform: perspective(400px) rotateX(10deg)
+    }
+    80% {
+        transform: perspective(400px) rotateX(-5deg)
+    }
+    to {
+        transform: perspective(400px)
+    }
+}
