src/index.css : add var --color__gray

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
     --color__white: #F5F6F7;
+    --color__gray: #666666;
     --color__accent1: #222E50;
     --color__accent2: #407BFF;
     --color__text: #011A3E;
