--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -50,3 +50,18 @@ footer>ul>li {
 footer>ul>li:hover>a {
     color: var(--color__white);
 }
+
+@media all and (max-width:765px) {
+    footer,
+    footer>ul {
+        flex-direction: column;
+        align-items: center;
+        gap: 1.5rem;
+    }
+    footer {
+        padding: 1.75rem 0;
+    }
+    .Footer-copyright {
+        margin: 0;
+    }
+}
