--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -39,7 +39,15 @@ header>nav>ul>li:hover>a {
     color: var(--color__accent1);
 }
 
-header>nav>ul>li>a.active{
+header>nav>ul>li>a.active {
     --d: 100%;
     background: linear-gradient(var(--color__white) 0 0) 0% calc(-5px - 100%) /var(--d, 0%) 205% no-repeat;
+}
+
+@media all and (max-width:765px) {
+    header,
+    header>nav>ul {
+        flex-direction: column;
+        align-items: center;
+    }
 }
