--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ main {
 
 h1 {
     font-weight: 700;
-    font-size: 45px;
+    font-size: 2.8125rem;
     margin-top: 0;
 }
 
@@ -95,6 +95,9 @@ h1 {
     font-weight: 600;
     color: var(--color__white);
     line-height: 1.625rem;
+    /*reset iPhone default style*/
+    -webkit-appearance: none;
+    border-radius: 0;
 }
 
 .button:hover {
@@ -136,5 +139,31 @@ h1 {
     }
     to {
         transform: perspective(400px)
+    }
+}
+
+@media all and (max-width:765px) {
+     :root {
+        --padding__LR: 1.5rem;
+    }
+    main {
+        padding: 2rem 1.75rem;
+        flex-direction: column;
+    }
+    main>.App-illustration.reversed {
+        order: 1;
+    }
+    main>.App-content {
+        order: 2;
+    }
+    p {
+        margin: 1rem 0;
+    }
+    p+p {
+        margin-top: 0;
+    }
+    h1 {
+        font-size: 2.2125rem;
+        text-align: center;
     }
 }
