--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -21,6 +21,10 @@ header {
     text-decoration: none;
 }
 
+.Header-burger {
+    display: none;
+}
+
 header>nav>ul {
     gap: 100px;
 }
@@ -45,9 +49,27 @@ header>nav>ul>li>a.active {
 }
 
 @media all and (max-width:765px) {
-    header,
+    .Header-burger {
+        display: unset;
+    }
+    nav {
+        display: none;
+    }
+    nav.openMenu {
+        display: unset;
+        position: absolute;
+        top: 56px;
+        height: calc(100% - 56px);
+        width: 100%;
+        background-color: var(--color__accent1);
+        left: 0;
+        z-index: 1;
+    }
     header>nav>ul {
         flex-direction: column;
         align-items: center;
+        justify-content: space-evenly;
+        height: 100%;
+        gap: unset;
     }
 }
