--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -102,3 +102,10 @@ header>nav>ul>li>a.active {
         gap: unset;
     }
 }
+
+
+@media all and (min-width:765px) and (max-width:992px) {
+    header>nav>ul {
+        gap: 2rem;
+    }
+}
