--- a/src/components/About.css
+++ b/src/components/About.css
@@ -23,3 +23,13 @@ i {
         margin-top: 2rem;
     }
 }
+
+
+@media all and (min-width:765px) and (max-width:992px) {
+    .About-paragraph+.About-paragraph{
+        margin:1.5rem 0;
+    }
+    .About-icons {
+        margin-top: 1.5rem;
+    }
+}
