src/components/Contact.css : ajout du style du toast de Contact

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,3 +1,17 @@
+.Contact-success {
+    position: fixed;
+    top: 84px;
+    left: 50%;
+    background-color: white;
+    padding: 25px;
+    transform: translateX(-50%);
+    z-index: 99;
+    width: 285px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.8);
+    border-radius: 5px;
+    text-align: center;
+}
+
 .Contact-means {
     display: flex;
     align-items: center;
@@ -53,6 +67,10 @@
 .Contact-means-formInput input.error,
 .Contact-means-formInput textarea.error {
     border-bottom-color: #F44336;
+}
+
+input[type="submit"]:disabled{
+    background-color: #454545;
 }
 
 .Contact-means-formInput span{
