--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -55,7 +55,7 @@
 
 .Contact-means-formInput input::placeholder,
 .Contact-means-formInput textarea::placeholder {
-    color: #AAAAAA;
+    color: #4F4F4F;
 }
 
 .Contact-means-formInput input:focus-visible,
