--- a/src/components/App.css
+++ b/src/components/App.css
@@ -48,14 +48,20 @@
         width: 100%;
         height: 100%;
     }
+
     .App-Numbers {
         flex-direction: column;
+    }
+
+    .btn-container {
+        display: flex;
+        justify-content: center;
     }
 }
 
 
 @media all and (min-width:765px) and (max-width:992px) {
-    .App-hello{
-        margin:1.5rem 0;
+    .App-hello {
+        margin: 1.5rem 0;
     }
 }
