--- a/src/components/ProjectsCards.css
+++ b/src/components/ProjectsCards.css
@@ -4,7 +4,6 @@
     box-shadow: 0px 0px 5px #000000;
     border-radius: 15px;
     color: #011A3E;
-    width: 34.375rem;
 }
 
 .ProjectsCards-illustration {
@@ -12,6 +11,10 @@
     border-radius: 15px 15px 0 0;
     overflow: hidden;
     display: flex;
+}
+
+.ProjectsCards-illustration-link {
+    width: 100%;
 }
 
 .ProjectsCards-illustration img {
@@ -55,11 +58,12 @@
 
 .ProjectsCards-languages {
     display: flex;
-    gap: 2.1875rem;
+    gap: 1rem;
     flex-wrap: wrap;
 }
 
 @media all and (max-width:765px) {
+
     .ProjectsCards-content {
         padding: 1.1875rem 1.4375rem;
 
@@ -80,7 +84,7 @@
 }
 
 @media all and (max-width:992px) {
-    .Project-Cards {
-        justify-content: center;
+    .ProjectsCards {
+        width: 34.375rem;
     }
 }
